--- a/heading.html
+++ b/heading.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heading</title>
+    <title>Headings</title>
 </head>
 <body>
-   <h1>This is my first push code to git hub</h1>
-   <h2>This is my first push code to git hub</h2>
-   <h3>This is my first push code to git hub</h3>
-   <h4>This is my first push code to git hub</h4>
-   <h5>This is my first push code to git hub</h5>
-   <h6>This is my first push code to git hub</h6> 
+    <h1>Heading1</h1>
+    <h2>Heading2</h2>
+    <h3>Heading3</h3>
+    <h4>Heading4</h4>
+    <h5>Heading5</h5>
+    <h6>Heading6</h6>
+    
 </body>
 </html>
